# Projects

./: README.md
Assembly/hw3/: hw3.ld  hw3_hook.asm
Computer_Systems/Chess_System/: CMakeLists.txt  chessSystem.c  game.c  game.h  main.c  map.c  map.h  node.c  node.h  tournament.c  tournament.h  utils.c  utils.h
Computer_Systems/Game_System/partB/: Auxiliaries.h  CMakeLists.txt  Character.cpp  Character.h  Damage.h  Exception.h  Exceptions.h  Game.cpp  Game.h  Medic.cpp  Medic.h  Sniper.cpp  Sniper.h  Soldier.cpp  Soldier.h  Utils.cpp  Utils.h
Data_structures/AVL_Football_Tournoment/: AVL.h  CMakeLists.txt  DS_wet1_Winter2022-23_updated.docx  Team.h  main.cpp  makefile  player.h  playerStats.h  submissions.txt  wet-verify.py  worldcup23a1.cpp  worldcup23a1.h
Data_structures/Massive_Data_Base/: AVL.h  DS_wet2_Winter2022-23-updated.docx  README.md  RankTree.h  Team.h  dynamic_array.h  input1.in  main.cpp  main23a2OFEK.cpp  mainTestPartialSpirit.cpp  output1.out  player.h  temp  test.out  union_find.h  wet2util.h  worldcup23a2.cpp  worldcup23a2.h
Hardware (System Verilog)/CPU_Add_On/: imem.hex  params.inc  rv_ctl.sv  rv_dp.sv  rv_top.sv  test.s
Hardware (System Verilog)/Calculator_From_Scratch (HARDWARE)/: mult16x16.s  mult32x32.sv  mult32x32_arith.sv  mult32x32_fast.sv  mult32x32_fast_arith.sv  mult32x32_fast_fsm.sv  mult32x32_fast_test.sv  mult32x32_fsm.sv  mult32x32_test.sv
Hardware (System Verilog)/mux_project/: alu1bit.sv  alu64bit.sv  alu64bit_test.sv  fas_test.sv  mux2.sv  mux4.sv  mux4_test.sv
Image_processing/HW3/: RG-315111401_AHB-208384123.ipynb
Image_processing/HW3.5/: Ex3_5.ipynb
(+73 files in other folders)
